--- a/.build.yml
+++ b/.build.yml
@@ -1,6 +1,7 @@
 image: archlinux
 packages:
-  - hugo
+  - libsass
+  - sassc
   - nodejs
   - npm
 sources:
@@ -15,9 +16,9 @@ tasks:
   - install_netlify: |
       sudo npm i -g netlify-cli
       netlify --telemetry-disable
-  - hugo_build: |
+  - sass_build: |
       cd $project_dir
-      hugo -D
+      sassc assets/scss/index.scss > assets/css/index.css
   - deploy_netlify: |
       source ./build-helpers/all.sh
       cd $project_dir
