--- a/.build.yml
+++ b/.build.yml
@@ -18,6 +18,7 @@ tasks:
       netlify --telemetry-disable
   - sass_build: |
       cd $project_dir
+      mkdir -p assets/css
       sassc assets/scss/index.scss > assets/css/index.css
   - deploy_netlify: |
       source ./build-helpers/all.sh
